<resources>
    <string name="app_name">GetInStyle</string>
    <string name="logInTitle">Welcome!\nAre you ready to\nGet in style?</string>
    <string name="logEmailAutoFill">Email</string>
    <string name="logInButtonTitle">Log In</string>
    <string name="logInWithFacebookButtonTitle">Log In with Facebook</string>
    <string name="signUpMessage">Don\'t have an account?\nNo prob…</string>
    <string name="signUpButtonTitle">Sign Up</string>
    <string name="passwordAutoFill">Password</string>
    <string name="signUpTitle">SIGN UP</string>
    <string name="signUpSubtitle">It\'s free and always will be</string>
    <string name="firstNameAutoFill">First Name</string>
    <string name="lastNameAutoFill">Last Name</string>
    <string name="createAccountButtonTitle">Create Account</string>
    <string name="birthdayText">Birthday</string>
    <string name="dayPrompt">Day</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="add_picture">Add image from your phone</string>
    <string name="load_a_new_style">LOAD A NEW STYLE</string>
    <string name="choose_a_photo_from_your_phone">Choose a photo from your phone</string>
    <string name="chooses_photo_for_create_style">Chooses photo for create style</string>
    <string name="apply_style">Apply Style</string>
    <string name="image">Image</string>
    <string name="comment_1">Lorem ipsum dolor sit amet, ne duo ornatus placerat, causae melius percipitur cum no, ius in civibus democritum omittantur. Eos nisl mundi facilis eu, quaestio abhorreant quo cu, hinc graecis patrioque mea ad. Est in purto illud iriure, has atqui facilisis ut, ne has delenit graecis atomorum. Eos solet docendi lobortis ea. 1</string>
    <string name="comment_2">Ea inermis senserit honestatis eum, modo illum convenire nec ut, solum maiestatis voluptatibus cum ei. </string>
    <string name="image_details">Image details</string>
    <string name="image_info">Image Info</string>
    <string name="site">http://10.11.1.64:8000</string>
    <string name="sort_by">Sort by:</string>

    <string-array name="sort_criteria">
        <item>Date</item>
        <item>Number of likes</item>
    </string-array>

    <string-array name="sort_criteria_asc_desc">
        <item>Desc</item>
        <item>Asc</item>
    </string-array>

    <string name="title_activity_all_photo_page">GetInStyle</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="search">Search</string>
    <string name="tag">Tag:</string>
    <string name="newPicture">New picture</string>
    <string name="user_page">User page</string>
    <string name="communicate">Communicate</string>
    <string name="title_activity_user_photos">UserPhotos</string>
    <string name="title_activity_tags">TagsActivity</string>

</resources>
