<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_black"
                android:paddingLeft="10dp"
                android:paddingTop="30dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="@string/signUpTitle"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:paddingLeft="10dp"
                android:paddingTop="0dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="@string/signUpSubtitle"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:autofillHints="@string/firstNameAutoFill"
                android:background="@color/colorPrimaryLight"
                android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                android:ems="10"
                android:fontFamily="@font/lato_black"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:text="First name"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:autofillHints="@string/lastNameAutoFill"
                android:background="@color/colorPrimaryLight"
                android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                android:ems="10"
                android:fontFamily="@font/lato_black"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:text="Last Name"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:autofillHints="@string/logEmailAutoFill"
                android:background="@color/colorPrimaryLight"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:ems="10"
                android:fontFamily="@font/lato_black"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:text="Email"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorPrimaryLight"
                android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                android:ems="10"
                android:fontFamily="@font/lato_bold"
                android:inputType="textPassword"
                android:padding="10dp"
                android:text="Password"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/ConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorPrimaryLight"
                android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                android:ems="10"
                android:fontFamily="@font/lato_bold"
                android:inputType="textPassword"
                android:padding="10dp"
                android:text="Password"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/birthdayText"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp">

                <Spinner
                    android:id="@+id/spinnerMonth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:background="@color/colorPrimaryLight"/>

                <Spinner
                    android:id="@+id/spinnerDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="@color/colorPrimaryLight"/>

                <Spinner
                    android:id="@+id/spinnerYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:background="@color/colorPrimaryLight"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimaryLight"
                    android:text="Female"
                    android:layout_weight="1"/>

                <Switch
                    android:id="@+id/switch2"
                    android:layout_width="26dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:text="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="2"
                    android:fontFamily="@font/lato_bold"
                    android:text="Male"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="15sp" />


            </LinearLayout>

            <Button
            android:id="@+id/createAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="25dp"
            android:background="@color/colorAccent"
            android:fontFamily="@font/lato_bold"
            android:padding="10dp"
            android:text="@string/createAccountButtonTitle"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryLight" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
