<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".LoadPictureForStyle">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewCount">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_black"
                android:paddingLeft="10dp"
                android:paddingTop="30dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="Stylize"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:paddingLeft="10dp"
                android:paddingTop="0dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="@string/choose_a_photo_from_your_phone"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/chooses_photo_for_create_style"
                android:src="@mipmap/ic_launcher" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/styles_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </LinearLayout>

            </HorizontalScrollView>

            <Button
                android:id="@+id/addImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorAccent"
                android:fontFamily="@font/lato_bold"
                android:onClick="selectImage"
                android:padding="10dp"
                android:text="@string/add_picture"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryLight" />

            <Button
                android:id="@+id/applyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="25dp"
                android:background="@android:color/holo_green_dark"
                android:fontFamily="@font/lato_bold"
                android:onClick="applyStyle"
                android:padding="10dp"
                android:text="@string/apply_style"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryLight" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="Description"
                android:textColorHighlight="#00B92020"
                android:visibility="visible"
                android:layout_margin="5dp"
                android:layout_marginTop="-10dp"
                android:fontFamily="@font/lato_black"
                android:textAlignment="inherit"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="25sp"/>

            <EditText
                android:id="@+id/tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="Tags"
                android:textColorHighlight="#00B92020"
                android:visibility="visible"
                android:layout_margin="5dp"
                android:layout_marginTop="-10dp"
                android:fontFamily="@font/lato_black"
                android:textAlignment="inherit"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="submit"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="25dp"
                android:background="@color/design_default_color_primary_dark"
                android:fontFamily="@font/lato_bold"
                android:padding="10dp"
                android:text="Submit"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryLight"
                android:visibility="visible"
                tools:ignore="HardcodedText" />

        </LinearLayout>



    </ScrollView>

</android.support.constraint.ConstraintLayout>
